--- a/about.html
+++ b/about.html
@@ -4,13 +4,18 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Devan Industries - Sanitary & Hardware Products</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <meta name="description" content="Luxury and durable sanitary & hardware products by Devan Industries. Explore premium bathroom fittings and bath accessories.">
+  <meta name="keywords" content="sanitary products, hardware fittings, bathroom accessories, Devan Industries">
+  
+  <title>Devan Industries | Sanitary & Hardware Products</title>
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
   <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
-  
+   
   <div class="whatsapp-icon" onclick="window.open('https://wa.me/918700363646', '_blank');">
     <img src="WhatsAppicon.svg" alt="WhatsApp" height="50px" width="50px">
 </div>
@@ -31,7 +36,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active"><a class="nav-link" href="index.html">Home <span
-              class="sr-only">(current)</span></a></li>
+              class="sr-only"></span></a></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -89,7 +94,7 @@
 <!-- Footer -->
 <footer class="site-footer">
   <div class="subscription" style="display: flex; position: relative; top: 120px;">
-    <div class="container-xl mb-md-4 mb-0" style="background-color: #f0f8ff;">
+    <div class="container-xl mb-md-4 mb-0" style="background-color:yellow;">
       <div class="newsletter-section px-4 px-md-5" style="padding: 60px;">
         <div class="row justify-content-between align-items-center">
           <div class="col-lg-6 col-xl-6 py-3">
@@ -102,8 +107,8 @@
                 <div class="col-sm-9 col-md-8 mb-3 mb-sm-0">
                   <input size="40" maxlength="400" class="form-control w-100" autocomplete="email" aria-required="true" placeholder="Enter Email ID" type="email" name="email" />
                 </div>
-                <div class="col-sm-3 col-md-4" style="background-color: yellow;">
-                  <input class="btn btn-warning w-100" type="submit" value="Subscribe" />
+                <div class="col-sm-3 col-md-4" style="background-color: white">
+                  <input class="btn btn-light w-100" type="submit" value="Subscribe" />
                 </div>
               </div>
             </form>
@@ -112,6 +117,7 @@
       </div>
     </div>
   </div>
+  
 
   <div style="background-color: grey">
     <div class="footer-content mb-3 mb-md-4" style="background-color:gray; padding-top: 80px;">
@@ -120,7 +126,7 @@
           <div class="col-lg-5 pe-3 pe-md-5">
             <div class="footer-about pe-3 pe-md-5 text-white">
               <figure class="mb-4 d-flex align-items-center">
-                <img class="img-fluid me-2" src="logo.jpg" alt="Devan Industries Logo" height="100px" width="100px" style="border-radius: 50%;">
+                <img class="img-fluid me-2" src="logo.jpg" alt="Devan Industries Logo" height="50px" width="50px" style="border-radius: 50%;">
                 <span style="font-size: 20px; color: #ff9800;">Devan Industries</span>
               </figure>
               <p class="mb-4">We provide top-notch sanitary and hardware products to enhance your living standards with quality and style.</p>
@@ -132,6 +138,7 @@
               </ul>
             </div>
           </div>
+          
 
           <div class="col-lg-7 pt-3 pt-md-4">
             <div class="row">
@@ -185,18 +192,21 @@
         </div>
       </div>
     </div>
+  
 
     <div class="divider" style=" background-color:gray;">
       <div class="container-xl">
           <hr>
       </div>
   </div>
-  <div class="footer-bottom py-4"style=" background-color:grey;" >
+  <div class="footer-bottom py-4" style=" background-color:gray;" >
       <div class="container-xl">
-        <div class="footer-text" style="display: flex; justify-content: space-between; align-items: center; padding-top: 10px;">
+        <div class="footer-text" style="display: flex; justify-content: space-between; align-items: center;">
           <span>&copy; 2025 Devan Industries | All Rights Reserved</span>
           <span>Designed by Ritik</span>
         </div>  </div>
+        </div>
+        
   </div>
 </footer>
   <!-- Scripts -->
