--- a/faq.html
+++ b/faq.html
@@ -4,12 +4,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Devan Industries - Sanitary & Hardware Products</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
+  <meta name="description" content="Luxury and durable sanitary & hardware products by Devan Industries. Explore premium bathroom fittings and bath accessories.">
+  <meta name="keywords" content="sanitary products, hardware fittings, bathroom accessories, Devan Industries">
+  
+  <title>Devan Industries | Sanitary & Hardware Products</title>
+  
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
   <link rel="stylesheet" href="stylesheet.css">
 </head>
 
 <body>
+   
+  <div class="whatsapp-icon" onclick="window.open('https://wa.me/918700363646', '_blank');">
+    <img src="WhatsAppicon.svg" alt="WhatsApp" height="50px" width="50px">
+</div>
+
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light" >
     <a class="navbar-brand d-flex align-items-center" href="#">
@@ -26,7 +36,7 @@
     <div class="collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav">
         <li class="nav-item active"><a class="nav-link" href="index.html">Home <span
-              class="sr-only">(current)</span></a></li>
+              class="sr-only"></span></a></li>
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
@@ -80,124 +90,129 @@
       </div>
   </div>
 </div>
-
+ 
 <!-- Footer -->
-<footer class="site-footer" >
-  <div class="subscription" style="display: flex; position: relative;top:120px ;">
-  <div class="container-xl mb-md-4 mb-0" style=" background-color:lightgray;">
+<footer class="site-footer">
+  <div class="subscription" style="display: flex; position: relative; top: 120px;">
+    <div class="container-xl mb-md-4 mb-0" style="background-color:yellow;">
       <div class="newsletter-section px-4 px-md-5" style="padding: 60px;">
-          <div class="row justify-content-between align-items-center">
-              <div class="col-lg-6 col-xl-6 py-3" >
-                  <h2 class="mb-0">Newsletter Subscription</h2>
-                  <p class="mb-0">Get the latest updates, offers, promotions and more.</p>
-              </div>
-              <div class="col-lg-6 col-xl-6 py-3">
-                  <div class="wpcf7 no-js" id="wpcf7-f645-o1" lang="en-US" dir="ltr" data-wpcf7-id="645">
-                      <form action="/#wpcf7-f645-o1" method="post" class="wpcf7-form init" aria-label="Contact form" novalidate="novalidate">
-                          <div class="row gx-2">
-                              <div class="col-sm-9 col-md-8 mb-3 mb-sm-0">
-                                  <input size="40" maxlength="400" class="wpcf7-form-control wpcf7-email wpcf7-validates-as-required wpcf7-text wpcf7-validates-as-email form-control w-100" autocomplete="email" aria-required="true" placeholder="Enter Email ID" type="email" name="email" />
-                              </div>
-                              <div class="col-sm-3 col-md-4" style="background-color:yellow;">
-                                  <input class="wpcf7-form-control wpcf7-submit has-spinner btn btn-yellow w-100" type="submit" value="Subscribe" />
-                              </div>
-                          </div>
-                      </form>
-                  </div>
-              </div>
+        <div class="row justify-content-between align-items-center">
+          <div class="col-lg-6 col-xl-6 py-3">
+            <h2 class="mb-0 text-primary">Newsletter Subscription</h2>
+            <p class="mb-0">Get the latest updates, offers, promotions and more.</p>
           </div>
+          <div class="col-lg-6 col-xl-6 py-3">
+            <form action="#" method="post" class="wpcf7-form init" aria-label="Contact form" novalidate="novalidate">
+              <div class="row gx-2">
+                <div class="col-sm-9 col-md-8 mb-3 mb-sm-0">
+                  <input size="40" maxlength="400" class="form-control w-100" autocomplete="email" aria-required="true" placeholder="Enter Email ID" type="email" name="email" />
+                </div>
+                <div class="col-sm-3 col-md-4" style="background-color: white">
+                  <input class="btn btn-light w-100" type="submit" value="Subscribe" />
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
       </div>
+    </div>
   </div>
-  </div>
-  <div style=" background-color: gray;">
-  <div class="footer-content mb-3 mb-md-4" style=" background-color:gray;padding-top: 80px;" >
+  
+
+  <div style="background-color: grey">
+    <div class="footer-content mb-3 mb-md-4" style="background-color:gray; padding-top: 80px;">
       <div class="container-xl">
-          <div class="row"style="padding-top: 40px;">
-              <div class="col-lg-5 pe-3 pe-md-5">
-                  <div class="footer-about pe-3 pe-md-5" >
-                      <figure class="mb-4">
-                          <img class="img-fluid" src="logo.jpg" alt="Devan Industries Logo" height="80px" width="80px " style="border-radius: 50%;">
-                          <span style="font-size: 20px;">Devan Industries</span>
-                      </figure>
-                      <p class="mb-4">We provide top-notch sanitary and hardware products to enhance your living standards with quality and style.</p>
-                      <h6 class="links-heading mb-2">Follow us on</h6>
-                      <ul class="list-inline social-handles">
-                          <li class="list-inline-item"><a href="https://www.facebook.com/share/1A7aiUzsQF/" target="_blank"><i class="fab fa-facebook"></i></a></li>
-                          <li class="list-inline-item"><a href="https://whatsapp.com/channel/0029Vawk6l1BFLgYHOGUof0K" target="_blank"><i class="fab fa-whatsapp"></i></a></li>
-                          <li class="list-inline-item"><a href="https://www.instagram.com/devanindustries?igsh=MWhycXJkMnk4am9paA==" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                      </ul>
-                  </div>
-              </div>
-              <div class="col-lg-7 pt-3 pt-md-4">
-                  <div class="row">
-                      <div class="col-md-7 pb-5 pb-lg-0">
-                          <div class="row">
-                              <div class="col">
-                                  <div class="links-block" style="color: aliceblue;">
-                                      <h6 class="links-heading">Company</h6>
-                                      <ul class="list-unstyled">
-                                          <li><a href="index.html" class="nav-link">Home</a></li>
-                                          <li><a href="about.html" class="nav-link">About</a></li>
-                                          <li><a href="faq.html" class="nav-link">FAQ</a></li>
-                                          <li><a href="contact.html" class="nav-link">Contact</a></li>
-                                      </ul>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                      <div class="col-md-5">
-                          <div class="contact-info">
-                              <h6 class="links-heading">Contact Info</h6>
-                              <div class="contact-info-block d-flex align-items-start">
-                                  <div class="flex-shrink-0 text-yellow">
-                                      <i class="fa-solid fa-location-dot"></i>
-                                  </div>
-                                  <div class="flex-grow-1">
-                                      Ground Floor Bhagya Vihar Plot No. 15, kh.no 8/21 Madanpur Dabas New Delhi
-                                  </div>
-                              </div>
-                              <div class="contact-info-block d-flex align-items-start">
-                                  <div class="flex-shrink-0 text-yellow">
-                                      <i class="fa fa-envelope"></i>
-                                  </div>
-                                  <div class="flex-grow-1">
-                                      <p><a href="mailto:devindustries1224@gmail.com">devindustries1224@gmail.com</a></p>
-                                  </div>
-                              </div>
-                              <div class="contact-info-block d-flex align-items-start">
-                                  <div class="flex-shrink-0 text-yellow">
-                                      <i class="fa fa-phone"></i>
-                                  </div>
-                                  <div class="flex-grow-1">
-                                      <p><a href="tel:+91-8700363646">+91 8700363646</a></p>
-                                  </div>
-                              </div>
-                          </div>
-                      </div>
-                  </div>
-              </div>
+        <div class="row" style="padding-top: 40px;">
+          <div class="col-lg-5 pe-3 pe-md-5">
+            <div class="footer-about pe-3 pe-md-5 text-white">
+              <figure class="mb-4 d-flex align-items-center">
+                <img class="img-fluid me-2" src="logo.jpg" alt="Devan Industries Logo" height="50px" width="50px" style="border-radius: 50%;">
+                <span style="font-size: 20px; color: #ff9800;">Devan Industries</span>
+              </figure>
+              <p class="mb-4">We provide top-notch sanitary and hardware products to enhance your living standards with quality and style.</p>
+              <h6 class="links-heading mb-2">Follow us on</h6>
+              <ul class="list-inline social-handles">
+                <li class="list-inline-item"><a href="https://www.facebook.com/share/1A7aiUzsQF/" target="_blank"><i class="bi bi-facebook"></i></a></li>
+                <li class="list-inline-item"><a href="https://whatsapp.com/channel/0029Vawk6l1BFLgYHOGUof0K" target="_blank"><i class="bi bi-whatsapp"></i></a></li>
+                <li class="list-inline-item"><a href="https://www.instagram.com/devanindustries?igsh=MWhycXJkMnk4am9paA==" target="_blank"><i class="bi bi-instagram"></i></a></li>
+              </ul>
+            </div>
           </div>
+          
+
+          <div class="col-lg-7 pt-3 pt-md-4">
+            <div class="row">
+              <div class="col-md-7 pb-5 pb-lg-0">
+                <div class="row">
+                  <div class="col">
+                    <div class="links-block text-white">
+                      <h6 class="links-heading" style="color: #ff9800;">Company</h6>
+                      <ul class="list-unstyled">
+                        <li><i class="bi bi-house-door text-info"></i> <a href="index.html" class="nav-link d-inline text-light">Home</a></li>
+                        <li><i class="bi bi-info-circle text-warning"></i> <a href="about.html" class="nav-link d-inline text-light">About</a></li>
+                        <li><i class="bi bi-question-circle text-primary"></i> <a href="faq.html" class="nav-link d-inline text-light">FAQ</a></li>
+                        <li><i class="bi bi-telephone text-danger"></i> <a href="contact.html" class="nav-link d-inline text-light">Contact</a></li>
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-md-5">
+                <div class="contact-info text-white">
+                  <h6 class="links-heading" style="color: #ff9800;">Contact Info</h6>
+                  <div class="contact-info-block d-flex align-items-start mb-3">
+                    <div class="flex-shrink-0 text-warning me-2">
+                      <i class="bi bi-geo-alt"></i>
+                    </div>
+                    <div class="flex-grow-1">
+                      Ground Floor Bhagya Vihar Plot No. 15, kh.no 8/21 Madanpur Dabas New Delhi
+                    </div>
+                  </div>
+                  <div class="contact-info-block d-flex align-items-start mb-3">
+                    <div class="flex-shrink-0 text-warning me-2">
+                      <i class="bi bi-envelope"></i>
+                    </div>
+                    <div class="flex-grow-1">
+                      <p><a href="mailto:devindustries1224@gmail.com" class="text-light">devindustries1224@gmail.com</a></p>
+                    </div>
+                  </div>
+                  <div class="contact-info-block d-flex align-items-start">
+                    <div class="flex-shrink-0 text-warning me-2">
+                      <i class="bi bi-telephone"></i>
+                    </div>
+                    <div class="flex-grow-1">
+                      <p><a href="tel:+91-8700363646" class="text-light">+91 8700363646</a></p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-  </div>
-  <div class="divider" style=" background-color:gray;">
+    </div>
+  
+
+    <div class="divider" style=" background-color:gray;">
       <div class="container-xl">
           <hr>
       </div>
   </div>
-  <div class="footer-bottom py-4"style=" background-color:grey;" >
+  <div class="footer-bottom py-4" style=" background-color:gray;" >
       <div class="container-xl">
-        <div class="footer-text" style="display: flex; justify-content: space-between; align-items: center; padding-top: 10px;">
+        <div class="footer-text" style="display: flex; justify-content: space-between; align-items: center;">
           <span>&copy; 2025 Devan Industries | All Rights Reserved</span>
           <span>Designed by Ritik</span>
         </div>  </div>
+        </div>
+        
   </div>
 </footer>
+  <!-- Scripts -->
+  <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+</body>
 
-    <!-- Scripts -->
-    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.0.7/dist/umd/popper.min.js"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-  </body>
-  
-  </html>
-  
+</html>
